# dataframes-haystack

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
notebooks/: dataframe-file-to-doc-example.ipynb  pandas-example.ipynb  polars-example.ipynb
src/dataframes_haystack/: __about__.py  __init__.py
src/dataframes_haystack/components/converters/: __init__.py  _base.py  _common.py  _utils.py  pandas.py  polars.py
tests/: conftest.py  test_converters_common.py  test_converters_pandas.py  test_converters_polars.py  test_converters_utils.py  utils.py
